# CubiAI

./: .gitignore  README.md  pyproject.toml
config/: cubiai.yaml
data/: README.md
docs/: ai-models.md  architecture.md  cli-usage.md  gui-roadmap.md  motion-descriptor-plan.md  pipeline.md  segmentation-upgrade.md
profiles/: anime-default.yaml
src/cubiai/: __init__.py  __main__.py  errors.py  logging_utils.py  workspace.py
src/cubiai/cli/: __init__.py
src/cubiai/cli/commands/: annotate.py  inspect.py  model.py  models.py  preview.py  process.py  profiles.py  split.py  train.py  workspace.py
src/cubiai/config/: __init__.py  loader.py  models.py
src/cubiai/models/: animator.py
src/cubiai/pipeline/: __init__.py  artifacts.py  context.py  runner.py  stages.py
src/cubiai/services/: annotation_preview.py  cluster_annotation.py  cluster_prepare.py  hf_segmentation.py  labelme_annotation.py  labelme_splitter.py  live2d.py  llm_rigging.py  psd_exporter.py  sam_hq_local.py
src/cubiai/viewers/: cluster_review.py
tests/: test_config_loader.py  test_profile_loader.py
tools/: decode_video.py
